# example

./: Dockerfile  __init__.py  config.json  extension.py  main.py  manifest.json  migrations.py  pyproject.toml  views.py  views_api.py
templates/example/: index.html
