[tool.poetry]
name = "example"
description = "Example Extension"
version="0.1.0"
authors=["github_username"]
# packages = [ {include = '../'} ]

[tool.poetry.dependencies]
# You can include your python-dependencies here
python = ">=3.9,<4.0 "
python-utils = "^3.5.2"
# lnbits-extension = "^0.10.0"
lnbits-extension = { path = "../../../packages/extension", develop = true }
lnbits-lib = { path = "../../../packages/lib", develop = true }


